Replace moz-prefixed white-space setting with pre-wrap to fix wrapping issue

--- a/assets/trix/stylesheets/editor.scss
+++ b/assets/trix/stylesheets/editor.scss
@@ -5,6 +5,5 @@ trix-editor {
   padding: 0.4em 0.6em;
   min-height: 5em;
   outline: none;
-  white-space: normal;
-  white-space: -moz-pre-space;
+  white-space: pre-wrap;
 }
